Fix spacing and css, add comments, change for-in to for loops

--- a/css/style.css
+++ b/css/style.css
@@ -1,246 +1,246 @@
 * {
-  padding:0;
-  margin:0;
-  font-family: 'Roboto', sans-serif;
+	padding:0;
+	margin:0;
+	font-family: 'Roboto', sans-serif;
 }
 
 .clearfix {
-  overflow: auto;
+	overflow: auto;
 }
 
 .education-entry, .work-entry, .project-entry {
-  padding-left: 5%;
-  padding-right: 5%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 #main {
-  max-width: 1000px;
-  margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto;
 }
 
 h1 {
-  font-size: 40px;
-  color: #fff;
-  line-height: 48px;
-  display: inline;
+	font-size: 40px;
+	color: #fff;
+	line-height: 48px;
+	display: inline;
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 26px;
-  color: #40185b;
-  line-height: 29px;
+	font-weight: bold;
+	font-size: 26px;
+	color: #40185b;
+	line-height: 29px;
 }
 
 h3 {
-  font-style: italic;
-  font-size: 20px;
-  color: #000000;
-  line-height: 22px;
+	font-style: italic;
+	font-size: 20px;
+	color: #000;
+	line-height: 22px;
 }
 
 h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4A4A4A;
-  line-height: 17px;
+	font-weight: bold;
+	font-size: 14px;
+	color: #4a4a4a;
+	line-height: 17px;
 }
 
 h2, h3, h4, h5 {
-  padding:10px;
-  padding-left: 5%;
-  padding-right: 5%;
+	padding:10px;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .date-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999999;
-  line-height: 16px;
-  float: left;
+	font-style: italic;
+	font-size: 14px;
+	color: #999;
+	line-height: 16px;
+	float: left;
 }
 
 .location-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999999;
-  line-height: 16px;
-  float: right;
+	font-style: italic;
+	font-size: 14px;
+	color: #999;
+	line-height: 16px;
+	float: right;
 
 }
 
 p {
-  font-size: 14px;
-  color: #333333;
-  line-height: 21px;
+	font-size: 14px;
+	color: #333;
+	line-height: 21px;
 }
 
 a {
-  color: #1199C3;
-  text-decoration: none;
-  margin-top: 10px;
-  display: block;
+	color: #1199c3;
+	text-decoration: none;
+	margin-top: 10px;
+	display: block;
 }
 
 li {
-  display:inline-block;
+	display:inline-block;
 }
 
 .welcome-message {
-  font-style: italic;
-  font-size: 18px;
-  color: #fff;
-  line-height: 28px;
+	font-style: italic;
+	font-size: 18px;
+	color: #fff;
+	line-height: 28px;
 }
 
 #skillsH3 {
-  color: #bbe39e;
-  display: none;
+	color: #bbe39e;
+	display: none;
 }
 
-.orange {
-  background-color: #bbe39e;
+.green {
+	background-color: #bbe39e;
 }
 
 .green-text {
-  color: #bbe39e;
+	color: #bbe39e;
 }
 
 .white-text {
-  font-weight: bold;
-  color: #fff;
+	font-weight: bold;
+	color: #fff;
 }
 
 .gray {
-  background-color: #F3F3F3; /*maybe try BBE39E */
-  padding-bottom: 10px;
-  clear:both;
+	background-color: #f3f3f3; /*maybe try BBE39E */
+	padding-bottom: 10px;
+	clear:both;
 }
 
 .dark-gray {
-  background-color: #629c39;
+	background-color: #629c39;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-image: url("../images/peaches_large_2x 3.jpg");
-  background-repeat: no-repeat;
-  background-position: center top;
-  //background-color: #629c39;
+	background-image: url("../images/peaches_large_2x 3.jpg");
+	background-repeat: no-repeat;
+	background-position: center top;
+	//background-color: #629c39;
 }
 
 .nameSub {
-  color:#fff;
+	color:#fff;
 }
 
 .flex-box {
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	padding: 10px;
 }
 
 .center-content {
-  padding-top: 2.5%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 2.5%
+	padding-top: 2.5%;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-bottom: 2.5%
 }
 
 #skills {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 .work-title {
-  color: #40185b;
-  font-size: 18px;
-  padding-left: 15px;
+	color: #40185b;
+	font-size: 18px;
+	padding-left: 15px;
 }
 
 .project-title, .school-title, .class-title {
-  color: #40185b;
-  font-size: 18px;
-  text-decoration: underline;
-  padding-left: 15px;
+	color: #40185b;
+	font-size: 18px;
+	text-decoration: underline;
+	padding-left: 15px;
 }
 
 li {
-  padding-bottom:5px;
+	padding-bottom:5px;
 }
 
 .biopic {
-  float: left;
-  padding: 10px;
-  width: 150px;
-  display: none;
+	float: left;
+	padding: 10px;
+	width: 150px;
+	display: none;
 }
 
 img {
-  padding: 10px;
+	padding: 10px;
 }
 
 /* Bar chart stuff */
 .chart div {
-  font: 10px sans-serif;
-  background-color: #4A4A4A;
-  text-align: right;
-  padding: 3px;
-  margin: 1px;
-  height: 12px;
-  color: white;
-  display: inline-block;
+	font: 10px sans-serif;
+	background-color: #4a4a4a;
+	text-align: right;
+	padding: 3px;
+	margin: 1px;
+	height: 12px;
+	color: white;
+	display: inline-block;
 }
 
 span {
-  padding: 5px;
+	padding: 5px;
 }
 
 #letsConnect {
-  text-align: center;
+	text-align: center;
 }
 
 @media only screen and (max-width: 1024px) {
-  #letsConnect {
-    margin-top: 5%;
-  }
+	#letsConnect {
+		margin-top: 5%;
+	}
 }
 
 @media only screen and (max-width:900px) {
-  .biopic {
-    width: 175px;
-  }
+	.biopic {
+		width: 175px;
+	}
 }
 
 @media only screen and (max-width: 750px) {
-  #letsConnect {
-    margin-top: 10%;
-  }
-  .biopic {
-    width: 150px;
-  }
-  .welcome-message {
-    display: none;
-  }
+	#letsConnect {
+		margin-top: 10%;
+	}
+	.biopic {
+		width: 150px;
+	}
+	.welcome-message {
+		display: none;
+	}
 }
 
 #map {
-  display: block;
-  height: 100%;
-  margin-left: 5%;
-  margin-right: 5%;
+	display: block;
+	height: 100%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 #mapDiv {
-  height: 100px;
-  width: 100%;
-  padding-bottom: 5%;
+	height: 100px;
+	width: 100%;
+	padding-bottom: 5%;
 }
 
 @media only screen and (min-width: 750px) {
-  #skillsH3,
-  .biopic {
-    display: block;
-  }
+	#skillsH3,
+	.biopic {
+		display: block;
+	}
 }
